# crew_template

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  test_message.http
app/: main.py
app/config/: openai.py
app/crews/: flow.py
app/routes/: message.py
app/schemas/: message.py
app/services/: agent_service.py
tests/routes/: message.py
